<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/peripheral_details_characteristic_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/char_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@color/very_dark_gray"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_name"
        android:layout_marginStart="15dp"
        android:textColor="@color/very_dark_gray"
        android:textSize="20sp" />

    <View
        android:id="@+id/horizontal_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/char_details_uuid"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/very_dark_gray" />

    <TextView
        android:id="@+id/service_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_separator"
        android:layout_marginStart="15dp"
        android:text="@string/service"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/horizontal_separator"
        android:layout_marginEnd="15dp"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/service_uuid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_service"
        android:layout_marginStart="15dp"
        android:text="@string/service_uuid"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_service_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/char_details_service"
        android:layout_marginEnd="15dp"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_service_uuid"
        android:layout_marginStart="15dp"
        android:text="@string/data_type"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/char_details_service_uuid"
        android:layout_marginEnd="15dp"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/properties_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_type"
        android:layout_marginStart="15dp"
        android:text="@string/properties"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/char_details_type"
        android:layout_marginEnd="15dp"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/last_updated_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_properties"
        android:layout_marginStart="15dp"
        android:text="@string/last_updated"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_details_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/char_details_properties"
        android:layout_marginEnd="15dp"
        android:textColor="@color/dark_gray"
        android:textSize="18sp" />

    <View
        android:id="@+id/horizontal_separator_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/char_details_timestamp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/very_dark_gray" />

    <TextView
        android:id="@+id/value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_separator_2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:labelFor="@+id/char_details_hex_value"
        android:text="@string/value"
        android:textColor="@color/very_dark_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/char_details_hex_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_separator_2"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/value_label"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="24sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/value_string_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_hex_value"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/string_value"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/char_details_value_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_hex_value"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/value_decimal_label"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@id/value_decimal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_value_string"
        android:layout_marginStart="15dp"
        android:text="@string/decimal_value"
        android:textColor="@color/very_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/char_details_value_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_value_string"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/value_decimal_label"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="italic" />

    <ToggleButton
        android:id="@+id/char_details_notification_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_value_decimal"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/toggle_button"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/white"
        android:textOff="@string/turn_on_notification"
        android:textOn="@string/turn_off_notification"
        android:textSize="25sp" />

    <Button
        android:id="@+id/char_details_read_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_value_decimal"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/char_details_notification_switcher"
        android:background="@drawable/button"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/read"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/char_details_write_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/char_details_value_decimal"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/char_details_read_btn"
        android:background="@drawable/button"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/write"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>
