<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- List Header Icon -->
    <ImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ble_icon"
        tools:ignore="ContentDescription"/>
    
    <!-- Device Name -->
    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image"
        android:layout_toEndOf="@id/image"
        android:text="@string/peripheral_name_init"
        android:textColor="#040404"
        android:textSize="24sp"
        android:textStyle="bold"/>
    
    <!-- Device Address -->
    <TextView
        android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_name"
        android:layout_marginStart="5dp"
        android:textColor="#343434"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/peripheral_address_initial" />

    <TextView
        android:id="@+id/device_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/rssi_image"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/peripheral_rssi_initial" />
    
    <ImageView
        android:id="@id/rssi_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:src="@drawable/rssi_3"
        tools:ignore="ContentDescription"/>

</RelativeLayout>