<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.blesample.BleScanActivity"
    android:background="@drawable/panel" >
    
    <TextView
        android:id="@+id/ble_devices_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/title_ble_devices"
        android:textColor="@color/dark_gray"
        android:padding="0px"
        android:textSize="35sp" />
    
    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_toStartOf="@+id/clear_button"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:textSize="25sp" />
    
    <Button
        android:id="@id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="25sp" />
    
    <View
        android:id="@+id/horizontal_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/scan_button"
        android:background="@color/dark_gray" />
    
    <ListView
        android:id="@+id/ble_devices_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontal_separator"
        android:layout_marginTop="10dp" />

</RelativeLayout>
