<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PeripheralActivity"
    android:orientation="horizontal" >
    
    <RelativeLayout
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="40" >

        <TextView
            android:id="@+id/peripheral_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="45sp"
            android:textStyle="bold"
            android:text="Test Device" />

        <TextView
            android:id="@+id/peripheral_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/peripheral_name"
            android:textSize="25sp"
            android:text="00:11:22:33:44:55:66:77" />
        
        <ImageView
            android:id="@+id/rssi_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:layout_below="@id/peripheral_address"
            android:src="@drawable/rssi_3" />
        
        <TextView
            android:id="@+id/peripheral_rssi"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/peripheral_address"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/rssi_image"
            android:gravity="center"
            android:textSize="35sp"
            android:text="-48 db" />
        
        <View
            android:id="@+id/horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rssi_image"
            android:layout_marginTop="5dp"
            android:background="@color/dark_gray" />
        
        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/disconnect_button"
            android:layout_below="@id/horizontal_separator"
            android:background="@drawable/button"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@id/disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/horizontal_separator"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_red"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:textSize="25sp" />
        
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout 
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="60">
        
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="#eee"
            android:padding="2dp" >
        </ListView>

    </RelativeLayout>

</LinearLayout>